--- a/lottery/package.json
+++ b/lottery/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "lottery",
+  "name": "contract",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "compile.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "ganache-cli": "^6.12.2",
+    "solc": "^0.4.17",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web3": "^1.7.3"
+  },
+  "devDependencies": {
+    "mocha": "^10.0.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC"
